fix section alignment

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,7 +10,7 @@
 }
 
 * {
-  scroll-padding-top: 6vh;
+  scroll-margin-top: 6vh;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -46,7 +46,7 @@ h2 {
 section {
   height: 100vh;
   width: 100%;
-  scroll-snap-align: start;
+  scroll-snap-align: center;
   background: linear-gradient(
     0.2turn,
     rgb(255, 0, 68, 0.1),
@@ -394,3 +394,9 @@ input[type="submit"]:hover {
 /* END -- Contact */
 
 /* Media Queries */
+@media only screen and (max-device-width: 1440px) and (max-device-height: 900px) {
+    .proj-container {
+            width: 80vw;
+            height: 80vh;
+        }
+}
